# fabric-sync

./: .env.example  CLAUDE.md  README.md  docker-compose.yml
backend/: Cargo.toml
backend/.sqlx/: query-008a36087fc3da4d1bdc4dd92696f36cdc892234af68de608be5b8653f9df65f.json  query-0d172527274d0bb54a5c2e7a00abb03bd1fc7c3bbbd7a472cbb85a6dae28114b.json  query-2408e3fa412d0dfd3ac1942bfa0cda3b16070b01500867e7a65e01548757541d.json  query-2c5b7bc47bf3e29eee6dfc28d96925a15943850a58095b2b93bd47e8f48200f7.json  query-356bdd472985bc61a14c5467372239bdde31ba0612b914c7e478aa20495932bd.json  query-3b0ce89166f3fd41d6efaee28b5dc60e34a3eb9a4c4893fd18d6c489cb2b29be.json  query-3b7318ebd518eca9fd2d68ffa44c162cc325735b163eb3dcec8c4bfd913ec24f.json  query-3cbb3ff786d06df399ab59651e737327a2d5a3a61921bcf6737331fe252b49ec.json  query-4af1e6121b045675330723e65581517172a0fe82904a5f2ad216532aa4ea1b4f.json  query-789b068d151db42b16ce81c5deadad74e7688a5dd6a9cfa30fcaf87fd5943bff.json  query-7922525b2248829c9608388f25ac4b385b63075d9526c5778679c3cd4389b583.json  query-7ebba4a182f77b12fd94c5970bf589cdb3054ee8f7f29246fa70dfeb790e95e1.json  query-875b39ac0763954ee9522a95517b96c2dea8c9c3712e4b8fa8e49cdc0b2cfcfc.json  query-89d49bdbf00156e75de5b330192aa85c2421ce319f7376f8506d915fd8aaff2a.json  query-a1f59aea5b34a7012674a78f8ed542b19df98ca4f697bdec6d7c3987830ede11.json  query-a3724998e196b8f9a920ce50cd170c4fce33fd8bf882d5a07445dd9b90e9b45a.json  query-a3b95e506dcfff20aaf7099730a0507799b4226116ac77a269fe5a4b2721845f.json  query-a63278b9637242faff860a53d7b4ff02e933cf595ad25168546378ec81e6f6a2.json  (+9 more)
(+193 files in other folders)
